Feat: Delete validation id added in API route
